Author: Beatriz Ovejero Date: Sun March 05 2017

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -3,9 +3,9 @@
     <!-- Base application theme. -->
     <style name="AppTheme" parent="Theme.AppCompat.Light.NoActionBar">
         <!-- Customize your theme here. -->
-        <item name="colorPrimary">#9C27B0</item>
+        <item name="colorPrimary">#607D8B</item>
         <item name="colorPrimaryDark">#7B1FA2</item>
-        <item name="colorAccent">#607D8B</item>
+        <item name="colorAccent">#9C27B0</item>
         <item name="colorButtonNormal">#E1BEE7</item>
     </style>
 
@@ -15,6 +15,9 @@
         <item name="android:padding">16dp</item>
         <item name="android:textSize">16sp</item>
         <item name="android:fontFamily">roboto-regular</item>
+        <item name="android:background">@drawable/rounded_textview</item>
+        <item name="android:layout_marginTop">10dp</item>
+
     </style>
 
     <style name="EditableStyle">
@@ -51,7 +54,9 @@
         <item name="android:layout_marginBottom">8dp</item>
         <item name="android:layout_marginLeft">24dp</item>
         <item name="android:layout_marginRight">24dp</item>
-     </style>
+        <item name="android:background">@drawable/rounded_textview</item>
+
+    </style>
 
     <style name="Result">
         <item name="android:layout_width">match_parent</item>
@@ -60,6 +65,21 @@
         <item name="android:padding">16dp</item>
         <item name="android:textSize">24sp</item>
         <item name="android:fontFamily">roboto-bold</item>
+        <item name="android:background">@drawable/rounded_result</item>
+
+    </style>
+
+    <style name="WebStyle">
+        <item name="android:layout_width">wrap_content</item>
+        <item name="android:layout_height">wrap_content</item>
+        <item name="android:layout_centerHorizontal">true</item>
+        <item name="android:background">@drawable/rounded_textview</item>
+        <item name="android:layout_marginBottom">8dp</item>
+        <item name="android:layout_marginLeft">24dp</item>
+        <item name="android:layout_marginRight">24dp</item>
+        <item name="android:layout_marginTop">5dp</item>
+        <item name="android:layout_below">@id/display_result</item>
+
     </style>
 
 </resources>
