--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -21,9 +21,9 @@
             <ImageView
                 android:layout_width="match_parent"
                 android:layout_height="206dp"
+                android:contentDescription="Madrid"
                 android:scaleType="fitXY"
-                android:src="@drawable/madrid"
-                android:contentDescription="Madrid" />
+                android:src="@drawable/madrid" />
 
             <TextView
                 style="@style/QuestionStyle"
@@ -145,10 +145,7 @@
                     android:id="@+id/yes"
                     style="@style/RadioStyle"
                     android:onClick="tenthQuestionRight"
-                    android:text="@string/Answer7_a"
-
-
-                    />
+                    android:text="@string/Answer7_a" />
 
                 <RadioButton
                     android:id="@+id/no"
@@ -194,12 +191,21 @@
                 <TextView
                     android:id="@+id/display_result"
                     style="@style/Result"
+                    android:layout_below="@id/button"
                     android:layout_gravity="center"
-                    android:text=""
-                    android:layout_below="@id/button"/>
+                    android:text="" />
+
+                <Button
+                    android:id="@+id/web"
+                    style="@style/WebStyle"
+                    android:onClick="onClickWeb"
+                    android:text="@string/web" />
 
             </RelativeLayout>
+
         </LinearLayout>
+
+
     </ScrollView>
 
 
