Date: Sun March 05 2017 Final version before Mentor checking

--- a/app/src/main/res/values/styles.xml
+++ b/app/src/main/res/values/styles.xml
@@ -69,16 +69,19 @@
 
     </style>
 
-    <style name="WebStyle">
-        <item name="android:layout_width">wrap_content</item>
+    <style name="Bonus">
+        <item name="android:layout_width">match_parent</item>
         <item name="android:layout_height">wrap_content</item>
-        <item name="android:layout_centerHorizontal">true</item>
-        <item name="android:background">@drawable/rounded_textview</item>
-        <item name="android:layout_marginBottom">8dp</item>
-        <item name="android:layout_marginLeft">24dp</item>
-        <item name="android:layout_marginRight">24dp</item>
-        <item name="android:layout_marginTop">5dp</item>
-        <item name="android:layout_below">@id/display_result</item>
+        <item name="android:gravity">center</item>
+        <item name="android:padding">16dp</item>
+        <item name="android:textSize">24sp</item>
+        <item name="android:fontFamily">roboto-bold</item>
+        <item name="android:layout_marginTop">10dp</item>
+    </style>
+
+    <style name="Webview">
+        <item name="android:layout_width">match_parent</item>
+        <item name="android:layout_height">match_parent</item>
 
     </style>
 
