--- a/app/src/main/res/layout/activity_main.xml
+++ b/app/src/main/res/layout/activity_main.xml
@@ -195,13 +195,20 @@
                     android:layout_gravity="center"
                     android:text="" />
 
-                <Button
-                    android:id="@+id/web"
-                    style="@style/WebStyle"
-                    android:onClick="onClickWeb"
-                    android:text="@string/web" />
+                <TextView
+                    android:id="@+id/Bonus"
+                    style="@style/Bonus"
+                    android:layout_below="@id/display_result"
+                    android:layout_gravity="center"
+                    android:text="@string/Bonus" />
+
+                <WebView
+                    android:id="@+id/webView"
+                    style="@style/Webview"
+                    android:layout_below="@id/Bonus" />
 
             </RelativeLayout>
+
 
         </LinearLayout>
 
